layout issues

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -13,11 +13,12 @@ html, body {
 
 
   #map {
-      width: 80%;
+      width: 100%;
       height: 90%;
       position: absolute;
       bottom: 0;
       right: 0;
+      z-index: auto;
 
   }
 
@@ -52,9 +53,9 @@ html, body {
   margin-top: 1rem;
   margin-left: 1rem;
   padding: 5px 11px;
-  background-color: rgb(63, 184, 210);
+  /*background-color: rgb(63, 184, 210);
   color: white;
-  border-radius: 3px;
+  border-radius: 3px;*/
   cursor: pointer;
 }
 
@@ -66,6 +67,7 @@ html, body {
       position: fixed;
   		color: rgb(213, 213, 213);
       background-color: rgb(68, 68, 68);
+      z-index: 1;
 
   }
 
